--- a/src/GCore.Source.Generators.CSharp/GCore.Source.Generators.CSharp.csproj
+++ b/src/GCore.Source.Generators.CSharp/GCore.Source.Generators.CSharp.csproj
@@ -1,7 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\GCore.Data.Structure.InheritedTree\src\GCore.Data.Structure.InheritedTree\GCore.Data.Structure.InheritedTree.csproj" />
+    <ProjectReference Include="..\GCore.Source.Generators\GCore.Source.Generators.csproj" />
+    <ProjectReference Include="..\GCore.Source\GCore.Source.csproj" />
+  </ItemGroup>
 
 </Project>
