--- a/src/GCore.Source.Generators/GCore.Source.Generators.csproj
+++ b/src/GCore.Source.Generators/GCore.Source.Generators.csproj
@@ -1,11 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
+
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GCore.Data.Structure.InheritedTree" Version="1.2.0" />
+    <ProjectReference Include="..\..\..\GCore.Data.Structure.InheritedTree\src\GCore.Data.Structure.InheritedTree\GCore.Data.Structure.InheritedTree.csproj" />
+    <ProjectReference Include="..\GCore.Source\GCore.Source.csproj" />
   </ItemGroup>
 
 </Project>
