--- a/src/GCore.Source.Generators.Tests/GCore.Source.Generators.Tests.csproj
+++ b/src/GCore.Source.Generators.Tests/GCore.Source.Generators.Tests.csproj
@@ -21,4 +21,10 @@
     <ProjectReference Include="..\GCore.Source\GCore.Source.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="IncludeFile.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
