--- a/src/GCore.Source.Generators.Razor/GCore.Source.Generators.Razor.csproj
+++ b/src/GCore.Source.Generators.Razor/GCore.Source.Generators.Razor.csproj
@@ -14,7 +14,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="3.10.0-1.final" />
+    <PackageReference Include="MiniRazor" Version="2.1.2" />
     <PackageReference Include="Virtuosity.Fody" Version="3.1.1" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="all" />
   </ItemGroup>
