Add ObjectElement dynamic loading

--- a/src/GCore.Source.Generators.Tests/GCore.Source.Generators.Tests.csproj
+++ b/src/GCore.Source.Generators.Tests/GCore.Source.Generators.Tests.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GCore.Source.Generators.Tests.Library\GCore.Source.Generators.Tests.Library.csproj" />
     <ProjectReference Include="..\GCore.Source.Generators\GCore.Source.Generators.csproj" />
     <ProjectReference Include="..\GCore.Source\GCore.Source.csproj" />
   </ItemGroup>
