Add CD workflow

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -3,7 +3,6 @@
   <Import Project="..\Version.props" />
 
   <PropertyGroup>
-    <Version>$(SolutionVersion)</Version>
     <Company>Gliewe.NET</Company>
     <Copyright>Copyright (C) Kevin Gliewe</Copyright>
     <LangVersion>latest</LangVersion>
@@ -35,5 +34,24 @@
   <ItemGroup>
     <None Include="../../doc/icon.png" Pack="true" PackagePath="" />
   </ItemGroup>
+
+  <!-- Suppress default attributes created by the compiler to prevent duplicate attribute errors -->
+  <PropertyGroup>
+    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
+    <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
+    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+    <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
+    <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
+    <GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
+  </PropertyGroup>
+
+  <Target Name="GenerateVersionInfo" BeforeTargets="CoreCompile">
+    <Exec Command="dotnet tool restore" />
+    <Exec Command="dotnet tool run rw-project-version -s=git -t=cs -v=$(VersionPrefix) -m=$(VersionSuffix)" />
+    <ItemGroup>
+      <Compile Remove="Properties\VersionInfo.cs" />
+      <Compile Include="Properties\VersionInfo.cs" />
+    </ItemGroup>
+  </Target>
 
 </Project>
