--- a/Version.props
+++ b/Version.props
@@ -1,5 +1,6 @@
 <Project>
   <PropertyGroup>
-    <SolutionVersion>1.0.0</SolutionVersion>
+    <VersionPrefix>1.0.0</VersionPrefix>
+    <VersionSuffix>rc</VersionSuffix>
   </PropertyGroup>
 </Project>
