--- a/src/GCore.Source.Generators.Scripting/GCore.Source.Generators.Scripting.csproj
+++ b/src/GCore.Source.Generators.Scripting/GCore.Source.Generators.Scripting.csproj
@@ -14,6 +14,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="GCore" Version="1.1.2.43" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="3.10.0-1.final" />
     <PackageReference Include="Virtuosity.Fody" Version="3.1.1" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="all" />
