Add DoxFx gh-pages

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -23,6 +23,24 @@ jobs:
           dotnet nuget locals all --clear
           dotnet pack --configuration Release --output pack
 
-      - name: Deploy
+      - name: Deploy Nuget
         run: |
           dotnet nuget push pack/*.nupkg -s nuget.org -k ${{ secrets.NUGET_TOKEN }}
+        
+      - uses: nikeee/docfx-action@v1.0.0
+        name: Build Documentation
+        with:
+          args: doc/docfx/docfx.json
+
+      # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
+      - name: Add .nojekyll file
+        run: touch doc/docfx/_site/.nojekyll
+        
+      - name: Deploy GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@3.5.9
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: doc/docfx/_site
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
