Fix BigInt to Int64 cast Exception

--- a/src/GCore.Source.JsonClassGenerator.Tests/GCore.Source.JsonClassGenerator.Tests.csproj
+++ b/src/GCore.Source.JsonClassGenerator.Tests/GCore.Source.JsonClassGenerator.Tests.csproj
@@ -23,4 +23,10 @@
     <ProjectReference Include="..\GCore.Source.JsonClassGenerator\GCore.Source.JsonClassGenerator.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TestData\BigIntEx.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
