--- a/src/GCore.Source.JsonClassGenerator.Cli/GCore.Source.JsonClassGenerator.Cli.csproj
+++ b/src/GCore.Source.JsonClassGenerator.Cli/GCore.Source.JsonClassGenerator.Cli.csproj
@@ -1,12 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="..\Tool.Build.props" />
+
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
-
-    <PackAsTool>true</PackAsTool>
     <ToolCommandName>jsongen</ToolCommandName>
-
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
