--- a/src/GCore.Source.JsonClassGenerator.Tests/GCore.Source.JsonClassGenerator.Tests.csproj
+++ b/src/GCore.Source.JsonClassGenerator.Tests/GCore.Source.JsonClassGenerator.Tests.csproj
@@ -1,13 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="..\Tests.Build.props" />
+
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-
-    <IsPackable>false</IsPackable>
-    <IsTestProject>true</IsTestProject>
-    <CollectCoverage>true</CollectCoverage>
-    <CoverletOutputFormat>opencover</CoverletOutputFormat>
-
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
