--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -13,10 +13,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.3.3
 
-      - name: Install .NET
+      - name: Install .NET (v5.0)
         uses: actions/setup-dotnet@v1.7.2
         with:
           dotnet-version: 5.0.x
+
+      - name: Install .NET (v3.1)
+        uses: actions/setup-dotnet@v1.7.2
+        with:
+          dotnet-version: 3.1.x
+
+      - name: Install .NET (v2.1)
+        uses: actions/setup-dotnet@v1.7.2
+        with:
+          dotnet-version: 2.1.x
 
       - name: Pack
         run: |
