--- a/src/GCore.Source.Generators.Scripting/GCore.Source.Generators.Scripting.csproj
+++ b/src/GCore.Source.Generators.Scripting/GCore.Source.Generators.Scripting.csproj
@@ -1,13 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <PublishRepositoryUrl>true</PublishRepositoryUrl>
-    <EmbedUntrackedSources>true</EmbedUntrackedSources>
-    <DebugType>embedded</DebugType>
-  </PropertyGroup>
+  <Import Project="..\Lib.Build.props" />
 
   <ItemGroup>
     <PackageReference Include="Fody" Version="6.4.0">
