--- a/src/GCore.Source.JsonClassGenerator/GCore.Source.JsonClassGenerator.csproj
+++ b/src/GCore.Source.JsonClassGenerator/GCore.Source.JsonClassGenerator.csproj
@@ -1,14 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+  <Import Project="..\Lib.Build.props" />
 
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <PublishRepositoryUrl>true</PublishRepositoryUrl>
-    <EmbedUntrackedSources>true</EmbedUntrackedSources>
-    <DebugType>embedded</DebugType>
+  <PropertyGroup>
     <Nullable>disable</Nullable>
   </PropertyGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
