--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -18,15 +18,15 @@ jobs:
         with:
           dotnet-version: 5.0.x
 
-      - name: Install .NET (v3.1)
-        uses: actions/setup-dotnet@v1.7.2
-        with:
-          dotnet-version: 3.1.x
+      # - name: Install .NET (v3.1)
+      #   uses: actions/setup-dotnet@v1.7.2
+      #   with:
+      #     dotnet-version: 3.1.x
 
-      - name: Install .NET (v2.1)
-        uses: actions/setup-dotnet@v1.7.2
-        with:
-          dotnet-version: 2.1.x
+      # - name: Install .NET (v2.1)
+      #   uses: actions/setup-dotnet@v1.7.2
+      #   with:
+      #     dotnet-version: 2.1.x
 
       - name: Pack
         run: |
