--- a/src/Exe.TargetFramework.Build.props
+++ b/src/Exe.TargetFramework.Build.props
@@ -1,5 +1,5 @@
 <Project>
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1;netcoreapp3.1;net5.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 </Project>
