--- a/src/GCore.Source.Cli/Properties/launchSettings.json
+++ b/src/GCore.Source.Cli/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "GCore.Source.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "--in .\\TestData\\InjectFile.txt --out [in]"
+      "commandLineArgs": "--help"
     }
   }
 }
