--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.3
+        fetch-depth: 0
 
       - name: Install .NET (v5.0)
         uses: actions/setup-dotnet@v1.7.2
