--- a/src/GCore.Source.Generators.T4/GCore.Source.Generators.T4.csproj
+++ b/src/GCore.Source.Generators.T4/GCore.Source.Generators.T4.csproj
@@ -7,9 +7,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="GCore" Version="1.1.2.43" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="3.10.0-1.final" />
-    <PackageReference Include="NuGet.PackageManagement" Version="5.9.1" />
+    <PackageReference Include="Mono.TextTemplating" Version="2.2.1" />
     <PackageReference Include="Virtuosity.Fody" Version="3.1.1" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="all" />
   </ItemGroup>
