--- a/src/Lib.Build.props
+++ b/src/Lib.Build.props
@@ -7,4 +7,11 @@
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <DebugType>embedded</DebugType>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Fody" Version="6.4.0">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Virtuosity.Fody" Version="3.1.1" />
+  </ItemGroup>
 </Project>
