--- a/Version.props
+++ b/Version.props
@@ -1,6 +1,6 @@
 <Project>
   <PropertyGroup>
-    <VersionPrefix>1.1.2</VersionPrefix>
-    <VersionSuffix>rc</VersionSuffix>
+    <VersionPrefix>0.0.0</VersionPrefix>
+    <!--<VersionSuffix>rc</VersionSuffix>-->
   </PropertyGroup>
 </Project>
