--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -23,6 +23,7 @@ jobs:
         id: bump_version
 
   build:
+    name: Build, Pack and Deploy
     runs-on: windows-latest
     needs: bump
     steps:
@@ -31,7 +32,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: setup python
+      - name: Setup Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.7.9'
@@ -67,6 +68,7 @@ jobs:
           file_glob: true
 
   doc:
+    name: Update Documentation
     runs-on: ubuntu-latest
     needs: build
     steps:
