--- a/src/Tests.Build.props
+++ b/src/Tests.Build.props
@@ -1,5 +1,5 @@
 <Project>
-  <Import Project=".\Exe.TargetFramework.Build.props" />
+  <Import Project=".\TargetFramework.Build.props" />
 
   <PropertyGroup>
     <IsPackable>false</IsPackable>
@@ -7,4 +7,14 @@
     <CollectCoverage>true</CollectCoverage>
     <CoverletOutputFormat>opencover</CoverletOutputFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="NUnit" Version="3.13.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="GitHubActionsTestLogger" Version="1.3.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 </Project>
