--- a/src/GCore.Source.JsonClassGenerator/GCore.Source.JsonClassGenerator.csproj
+++ b/src/GCore.Source.JsonClassGenerator/GCore.Source.JsonClassGenerator.csproj
@@ -6,10 +6,7 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
-
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Pluralize.NET" Version="1.0.2" />
-  </ItemGroup>
+  <Import Project="..\PackageReferences\Newtonsoft.Json.props" />
+  <Import Project="..\PackageReferences\Pluralize.NET.props" />
 
 </Project>
