--- a/src/GCore.Source/GCore.Source.csproj
+++ b/src/GCore.Source/GCore.Source.csproj
@@ -2,9 +2,6 @@
 
   <Import Project="..\Lib.Build.props" />
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="all" />
-    <PackageReference Include="System.Text.Json" Version="5.0.1" />
-  </ItemGroup>
+  <Import Project="..\PackageReferences\System.Text.Json.props" />
 
 </Project>
