Add custom file resolver for scripts

--- a/src/GCore.Source.Scripting.Tests/GCore.Source.Scripting.Tests.csproj
+++ b/src/GCore.Source.Scripting.Tests/GCore.Source.Scripting.Tests.csproj
@@ -6,4 +6,10 @@
     <ProjectReference Include="..\GCore.Source.Scripting\GCore.Source.Scripting.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TestData\importme.csx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
