--- a/src/GCore.Source.Generators/GCore.Source.Generators.csproj
+++ b/src/GCore.Source.Generators/GCore.Source.Generators.csproj
@@ -6,4 +6,7 @@
     <ProjectReference Include="..\GCore.Source\GCore.Source.csproj" />
   </ItemGroup>
 
+  <Import Project="..\PackageReferences\GCore.Dynamics.props" />
+  <Import Project="..\PackageReferences\GCore.Dynamics.Json.props" />
+
 </Project>
