--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -28,7 +28,7 @@ jobs:
     needs: bump
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.3.3
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
@@ -40,10 +40,11 @@ jobs:
       - name: Update Version
         run: python scripts/update_version.py "${{ needs.bump.outputs.newtag }}"
 
-      - name: Install .NET (v6.0)
-        uses: actions/setup-dotnet@v1.7.2
+      - name: Install .NET (v8.0)
+        uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: 6.0.x
+          dotnet-version: 8.0.x
+          dotnet-quality: 'preview'
 
       - name: Pack
         run: |
@@ -73,7 +74,7 @@ jobs:
     needs: build
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.3.3
+        uses: actions/checkout@v3
         
       - uses: nikeee/docfx-action@v1.0.0
         name: Build Documentation
