--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,4 +22,4 @@ jobs:
           DOTNET_SYSTEM_GLOBALIZATION_INVARIANT: 1
 
       - name: Build & test (.NET v8.0)
-        run: dotnet test --configuration Release --logger GitHubActions --framework net8.0
+        run: dotnet test --configuration Release --logger GitHubActions
